--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "php": ">=5.4.0",
         "omnipay/common": "~3.0",
-        "php-http/guzzle6-adapter": "~1.1.1"
+        "guzzle7-adapter": "~1.0.0"
     },
     "require-dev": {
         "omnipay/tests": "~2.0"
