--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "php": ">=5.4.0",
         "omnipay/common": "~3.0",
-        "guzzle7-adapter": "~0.1.1"
+        "php-http/guzzle7-adapter": "~0.1.1"
     },
     "require-dev": {
         "omnipay/tests": "~2.0"
