--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "omnipay/common": "~3.0",
-        "php-http/guzzle6-adapter": "~1.1.1"
+        "php": ">=7.2.0",
+        "omnipay/common": "^3.1.2",
+        "php-http/guzzle7-adapter": "^1.0.0",
+        "guzzlehttp/guzzle": "^7.3.0",
+		"ext-openssl": "*"
     },
     "require-dev": {
         "omnipay/tests": "~2.0"
