--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require": {
         "php": ">=7.2.0",
         "omnipay/common": "^3.1.2",
+	"illuminate/support": "5.* || 6.* || 7.* || 8.* || 9.*|| 10.*",    
         "php-http/guzzle7-adapter": "^1.0.0",
         "guzzlehttp/guzzle": "^7.3.0",
 		"ext-openssl": "*"
